ci: add correct script location

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node ./tools/server.js",
     "build": "node ./tools/build.js",
     "test": "node ./tools/run_test.js",
-    "get-config": "node get-config.js"
+    "get-config": "node ./tools/get-config.js"
   },
   "devDependencies": {
     "argparse": "^1.0.7",
