--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "get-config": "node ./get_config.js"
   },
   "devDependencies": {
-    "axios": "^0.17.1"
+    "axios": "^0.17.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
