--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.2.1",
     "autoprefixer": "7.1.6",
     "axios": "0.17.1",
     "babel-core": "6.26.0",
@@ -37,12 +38,14 @@
     "react": "16.2.0",
     "react-dev-utils": "5.0.0",
     "react-dom": "16.2.0",
+    "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "style-loader": "0.19.0",
@@ -61,6 +64,7 @@
     "get-config": "node ./get_config.js"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.6.4",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-import": "2.8.0",
