chore: renovate stop owning me

--- a/package.json
+++ b/package.json
@@ -113,5 +113,10 @@
       "standard",
       "standard-react"
     ]
+  },
+  "renovate": {
+    "lockFileMaintenance": {
+      "enabled": false
+    }
   }
 }
