--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # dependencies
 /node_modules
 
+# config
+.env
 # testing
 /coverage
 
@@ -15,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
