--- a/package.json
+++ b/package.json
@@ -1,131 +1,98 @@
 {
-  "name": "sr",
-  "version": "0.1.0",
+  "name": "sb",
+  "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "antd": "3.2.1",
-    "autoprefixer": "7.1.6",
-    "axios": "0.17.1",
-    "babel-core": "6.26.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "22.2.2",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "3.1.1",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.9",
-    "dotenv": "5.0.0",
-    "dotenv-expand": "4.2.0",
-    "dropbox": "3.0.4",
-    "eslint": "4.17.0",
-    "eslint-config-react-app": "2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.44.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.6.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "fs-extra": "3.0.1",
-    "history": "4.7.2",
-    "html-webpack-plugin": "2.30.1",
-    "jest": "22.3.0",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.1.0",
-    "promise": "8.0.1",
-    "raf": "3.4.0",
-    "react": "16.2.0",
-    "react-dev-utils": "5.0.0",
-    "react-dom": "16.2.0",
-    "react-hot-loader": "3.1.3",
-    "react-redux": "5.0.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "react-router-redux": "5.0.0-alpha.9",
-    "react-scripts": "1.1.1",
-    "redux": "3.7.2",
-    "redux-persist": "5.8.0",
-    "redux-thunk": "2.2.0",
-    "reselect": "3.0.1",
-    "style-loader": "0.20.2",
-    "styled-components": "3.1.6",
-    "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+  "description": "sb created by Rekit.",
+  "keywords": [
+    "rekit"
+  ],
+  "rekit": {
+    "devPort": 3000,
+    "studioPort": 6076,
+    "buildPort": 6077,
+    "plugins": [],
+    "css": "less"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "get-config": "node ./get_config.js",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "start": "node ./tools/server.js",
+    "build": "node ./tools/build.js",
+    "test": "node ./tools/run_test.js",
+    "get-config": "node ./tools/get_config.js"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.13",
-    "@storybook/addon-links": "^3.3.13",
-    "@storybook/react": "^3.3.13",
-    "eslint-config-standard": "11.0.0-beta.0",
-    "eslint-config-standard-react": "5.0.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-node": "6.0.0",
-    "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-react": "7.6.1",
-    "eslint-plugin-standard": "3.0.1"
+    "argparse": "^1.0.7",
+    "axios": "^0.17.0",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.8",
+    "dotenv-webpack": "^1.5.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "express": "^4.16.2",
+    "express-history-api-fallback": "^2.2.1",
+    "file-loader": "^1.1.6",
+    "fs": "^0.0.1-security",
+    "history": "^4.7.2",
+    "jsdom": "^11.5.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
+    "mocha": "^4.1.0",
+    "mocha-webpack": "^1.0.1",
+    "nock": "^9.1.6",
+    "npm-run": "^4.1.2",
+    "nyc": "^11.4.1",
+    "prop-types": "^15.5.10",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "5.0.0-alpha.9",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.4.0",
+    "redux-thunk": "^2.2.0",
+    "rekit-core": "^2.1.1",
+    "rekit-studio": "^2.2.0",
+    "request": "^2.83.0",
+    "shelljs": "^0.8.1",
+    "sinon": "^4.1.5",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-hot-middleware": "^2.21.0",
+    "webpack-node-externals": "^1.6.0"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "mjs",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "standard",
-      "standard-react"
-    ]
-  },
-  "renovate": {
-    "lockFileMaintenance": {
-      "enabled": false
-    }
+  "dependencies": {
+    "antd": "^3.2.1",
+    "dotenv": "^5.0.0",
+    "dropbox": "^3.0.4",
+    "redux-persist": "^5.9.0",
+    "styled-components": "^3.1.6"
   }
 }
