chore: reorganize project structure using template generators

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,8 +14,8 @@
       "@features/*": [
         "./features/*"
       ],
-      "@common/*": [
-        "common/*"
+      "@config/*": [
+        "config/*"
       ]
     }
   }
