--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "env",
     "react",
-    "babel-preset-stage-0"
+    "babel-preset-stage-0",
+    "flow"
   ],
   "plugins": [
     "react-hot-loader/babel",
