--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@storybook/react": "^3.3.13",
     "argparse": "^1.0.7",
     "axios": "^0.17.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.0.0",
@@ -36,6 +37,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
@@ -57,6 +59,7 @@
     "express": "^4.16.2",
     "express-history-api-fallback": "^2.2.1",
     "file-loader": "^1.1.6",
+    "flow-bin": "^0.66.0",
     "fs": "^0.0.1-security",
     "history": "^4.7.2",
     "jsdom": "^11.5.1",
