--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "eslint": "4.18.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-config-standard": "11.0.0-beta.0",
+    "eslint-config-standard-flow": "^1.0.1",
     "eslint-config-standard-react": "5.0.0",
     "eslint-import-resolver-babel-module": "4.0.0",
+    "eslint-plugin-flowtype": "^2.45.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-node": "6.0.0",
