--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-istanbul": "4.1.5",
     "babel-plugin-lodash": "3.3.2",
     "babel-plugin-module-resolver": "3.1.0",
+    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
@@ -62,6 +63,7 @@
     "express-history-api-fallback": "2.2.1",
     "file-loader": "1.1.7",
     "flow-bin": "0.66.0",
+    "flow-webpack-plugin": "^1.2.0",
     "fs": "0.0.1-security",
     "history": "4.7.2",
     "jsdom": "11.6.2",
@@ -102,6 +104,7 @@
     "antd": "3.2.1",
     "dotenv": "5.0.0",
     "dropbox": "3.0.4",
+    "prop-types-extra": "^1.0.1",
     "redux-persist": "5.9.1",
     "styled-components": "3.1.6",
     "uuid": "3.2.1"
